--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,15 +1,28 @@
 @(title: String)(content: Html)
 
 <!DOCTYPE html>
-
-<html lang="en">
-    <head>
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
-    </head>
-    <body>
+<html>
+<head>
+    <title>@title</title>
+    <link rel='shortcut icon' type='image/png' href='@routes.Assets.versioned("images/favicon.png")'>
+    <link rel="stylesheet" href='@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")'>
+    <script type='text/javascript' src='@routes.Assets.versioned("lib/jquery/jquery.js")'></script>
+    <style>
+    body {
+        margin-top: 50px;
+    }
+    </style>
+</head>
+<body>
+    <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container-fluid">
+                <a id="titleLink" class="brand" href="/">@title</a>
+            </div>
+        </div>
+    </div>
+    <div class="container">
         @content
-    </body>
+    </div>
+</body>
 </html>
