--- a/app/views/app.scala.html
+++ b/app/views/app.scala.html
@@ -1,51 +1,32 @@
-@(title: String)(content: Html)
+@(body: Html)
 
 <!DOCTYPE html>
 <html lang="en" ng-app="myApp">
 <head>
     <meta charset="utf-8">
-    <title>@title</title>
+    <title>Enduraquest</title>
     <link rel='shortcut icon' type='image/png' href='@routes.Assets.versioned("images/favicon.png")'>
     <link rel="stylesheet" href='@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")'>
+    <link rel="stylesheet" href="/assets/stylesheets/main.css">
+    <link rel="stylesheet" href="/assets/stylesheets/ie10-viewport-bug-workaround.css">
     <script type='text/javascript' src='@routes.Assets.versioned("lib/jquery/jquery.js")'></script>
-    <style>
-    body {
-        margin-top: 50px;
-    }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container-fluid">
-                <a id="titleLink" class="brand" href="/">@title</a>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        @content
-    </div>
-    <footer>
-        <hr/>
-        <div>
-            <span>&copy; Enduraquest 2015</span>
-        </div>
-        <div>
-            <span app-version></span>
-        </div>
-    </footer>
+    @body
 </body>
 
 <script src='@routes.Assets.versioned("lib/angularjs/angular.js")' type="text/javascript"></script>
 <script src='@routes.Assets.versioned("lib/angularjs/angular-route.js")' type="text/javascript"></script>
+<script src='@routes.Assets.versioned("lib/angularjs/angular-cookies.js")' type="text/javascript"></script>
 <script src='@routes.Assets.versioned("lib/angular-ui-bootstrap/ui-bootstrap-tpls.js")' type="text/javascript"></script>
 
-    <!-- Coffee script compiled resources (generated) -->
 <script src="/assets/js/app.js" type="text/javascript"></script>
 <script src="/assets/js/common/Config.js" type="text/javascript"></script>
 <script src="/assets/js/directives/AppVersion.js" type="text/javascript"></script>
 <script src="/assets/js/users/UserService.js" type="text/javascript"></script>
 <script src="/assets/js/users/UserCtrl.js" type="text/javascript"></script>
+<script src="/assets/js/users/LoginCtrl.js" type="text/javascript"></script>
 <script src="/assets/js/users/CreateUserCtrl.js" type="text/javascript"></script>
 <script src="/assets/js/users/UpdateUserCtrl.js" type="text/javascript"></script>
 
